# ikarus-examples

./: .bettercodehub.yml  .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.h.cmake  dune.module  ikarus-examples.pc.in
.github/workflows/: codespell.yml  debian.yml  reuseLint.yml  style.yml  updatelicense.yml
.github/workflows/scripts/: updatelicense.py
.reuse/: dep5
cmake/FormatTarget/: CMakeLists.txt
cmake/modules/: CMakeLists.txt  IkarusExamplesMacros.cmake
src/: CMakeLists.txt  iks001_cantileverBeamOneDGrid.cpp  iks001_cantileverBeam_oneDGrid.cpp  iks001_computePi.cpp  iks002_cantileverBeamOneDGrid.cpp  iks002_computePi.cpp  iks002_compute_pi.cpp  iks003_computePi.cpp  iks003_compute_pi.cpp  iks003_incompressibleLinearElasticity.cpp  iks004_incompressibleLinearElasticity.cpp  iks004_incompressible_LinearElasticity.cpp  iks004_kirchhoffPlate.cpp  iks005_kirchhoffPlate.cpp  iks005_kirchhoff_plate.cpp  iks005_newtonRaphson.cpp  iks006_newtonRaphson.cpp  iks006_nonlinear2DSolid.cpp  iks007_nonlinear2DSolid.cpp  iks007_nonlinear2Dsolid.cpp  iks007_vonMisesTruss.cpp  iks008_cooksMembrane.cpp  iks008_vonMisesTruss.cpp  iks008_vonmises_truss.cpp  iks009_cook_membrane.cpp  iks009_cooksMembrane.cpp  iks010_cook_membrane_convergence.cpp  iks010_cooksMembraneConvergenceStudy.cpp  tut_basis_oneDGrid.cpp  tut_basis_oneDGrid_sophisticated.cpp  tut_compute-pi0.cpp  tut_compute-pi1.cpp  tut_incompressible_LinearElasticity.cpp  tut_kirchhoff-plate.cpp  tut_newtonRaphson.cpp  tut_nonlinear2Dsolid.cpp  tut_vonmisestruss_clean.cpp
src/auxiliaryFiles/: iks008_cooksMembrane.parset  iks009_cook_membrane.parset
